# aoc

./: Cargo.toml
2017/: Ex1.hs  Ex10.hs  Ex10b.hs  Ex11.hs  Ex11b.hs  Ex12.hs  Ex2.hs  Ex3.hs  Ex3b.hs  Ex4.hs  Ex5.hs  Ex5b.hs  Ex6.hs  Ex6b.hs  Ex7a.hs  Ex8.hs  Ex9.hs
2018/: Cargo.toml  aoc2018.cabal  stack.yaml
2018/src/: Lib.hs
2019/ex01/: LICENSE  ex01.cabal  stack.yaml
2019/ex01/src/: Main.hs
2019/ex02a/: Cargo.toml
2019/ex02a/src/: main.rs
2019/ex02b/: Cargo.toml
2019/ex02b/src/: main.rs
2019/ex03a/src/: main.rs
2019/ex03b/: Cargo.toml
2019/ex03b/src/: main.rs
2019/ex04a/src/: main.rs
2019/ex04b/: Cargo.toml
2019/ex04b/src/: main.rs
2019/ex05a/src/: main.rs
2019/ex05b/: Cargo.toml
2019/ex05b/src/: main.rs
2019/ex06/: Cargo.toml
2019/ex06/src/: main.rs
2019/ex07/: Cargo.toml
2019/ex07/src/: main.rs
2019/ex08/: Cargo.toml
2019/ex08/src/: main.rs
2019/ex10/: Cargo.toml
2019/ex10/src/: main.rs
2019/ex12/: Cargo.toml
2019/ex12/src/: main.rs
2020/: Cargo.toml
2020/src/: direction.rs  lib.rs
2021/: Cargo.toml
2021/src/: count.rs  count_bucket.rs  grid.rs  job_queue.rs  job_queue2.rs  job_queue_set.rs  lib.rs  point.rs
2021/txt/: e13.out.txt
2022/: CHANGELOG.md  Cargo.toml  LICENSE  aoc.cabal
2022/src/: cell.rs  count_bucket.rs  direction.rs  grid.rs  job_queue2.rs  lib.rs  line.rs  point.rs  regex.rs
2022/txt/: e07.txt
2023/: Cargo.toml  LICENSE
2023/src/: board.rs  count.rs  grid.rs  lib.rs  point.rs
2023/txt/: s10c.txt
2024/: Cargo.toml  LICENSE  aoc2024.cabal
2024/01/: a01.nu  b01.nu
2024/02/: a02.nu
2024/src/: Lib.hs  count.rs  graph.rs  grid.rs  job_queue_set.rs  lib.rs  point.rs
2025/: e01a.hs
src/: board.rs  cell.rs  count.rs  direction.rs  graph.rs  grid.rs  job_queue.rs  lib.rs  line.rs  point.rs
