cabal-version:      3.0
name:               aoc
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Adam Bergmark
maintainer:         adam@bergmark.nl
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable e01
    import:           warnings
    main-is:          bin/e01.hs
    -- other-modules:
    ghc-options: -Wall
    other-extensions: TypeApplications, BlockArguments
    build-depends:    base ^>=4.17.0.0, split
    hs-source-dirs:   src
    default-language: GHC2021
