[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
derive_more = "0.99.17"
itertools = "0.10.1"
lazy-regex = "2.3.1"
pretty_assertions = "1.0.0"
regex = "1.7.0"
regex_captures = "0.2.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
strum = { version = "0.25.0", features = ["derive"] }
