[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
derive_more = { version = "1", features = ["full"] }
itertools = "0.13"
lazy-regex = "3"
num = "0.4.1"
once_cell = "1.19.0"
pretty_assertions = "1.0.0"
rayon = "1.8.0"
regex = "1.7.0"
regex_captures = "0.2.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
strum = { version = "0.26.0", features = ["derive"] }
